<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/spendDetail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_150"
            android:src="@color/design_default_color_error"/>

        <TextView
            android:id="@+id/txtSpendName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/sp_24"
            android:layout_marginTop="@dimen/dp_24"/>

        <TextView
            android:id="@+id/txtSpendCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="180 TL"
            android:textSize="@dimen/sp_24"
            android:layout_marginTop="@dimen/dp_10"/>

        <Button
            android:id="@+id/btnDeleteSpend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="@dimen/sp_24"
            android:layout_marginTop="@dimen/dp_30"
            android:paddingVertical="@dimen/dp_10"
            android:paddingHorizontal="@dimen/dp_16"/>

    </LinearLayout>

</LinearLayout>