<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewUserInformations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            app:cardCornerRadius="@dimen/dp_16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="@dimen/dp_24"
                    android:layout_marginVertical="@dimen/dp_20"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yourSpend"
                        android:textSize="@dimen/sp_24" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtTotalPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/defaultPrice"
                            android:textSize="@dimen/sp_30" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="@dimen/dp_20"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello"
                        android:textSize="@dimen/sp_24" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textAlignment="center"
                        android:textSize="@dimen/sp_30" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_currency_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_gravity="center"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSetTL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/tl"
                android:textSize="@dimen/sp_16"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSetUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/usd"
                android:textSize="@dimen/sp_16"
                android:layout_marginStart="@dimen/dp_10"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSetEURO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/euro"
                android:textSize="@dimen/sp_16"
                android:layout_marginStart="@dimen/dp_10"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSetSterling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/gbp"
                android:textSize="@dimen/sp_16"
                android:layout_marginStart="@dimen/dp_10"/>

        </com.google.android.material.chip.ChipGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"/>

    </LinearLayout>

    <com.tuann.floatingactionbuttonexpandable.FloatingActionButtonExpandable
        android:id="@+id/fabDeleteSpends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_content="@string/addSpend"
        app:fab_text_color="@android:color/white"
        app:fab_icon="@drawable/ic_baseline_delete_24"
        app:fab_bg_color="@color/smooth_black"
        app:fab_duration="100"
        app:fab_text_size="@dimen/sp_16"
        app:fab_expanded="false"
        android:layout_margin="@dimen/dp_16"
        app:fab_padding_text_icon="@dimen/dp_10"
        android:layout_gravity="bottom|start"/>

    <com.tuann.floatingactionbuttonexpandable.FloatingActionButtonExpandable
        android:id="@+id/fabAddSpend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_content="@string/addSpend"
        app:fab_text_color="@android:color/white"
        app:fab_icon="@drawable/ic_baseline_add_24"
        app:fab_bg_color="@color/smooth_black"
        app:fab_duration="100"
        app:fab_text_size="@dimen/sp_16"
        app:fab_expanded="true"
        android:layout_margin="@dimen/dp_16"
        app:fab_padding_text_icon="@dimen/dp_10"
        android:layout_gravity="bottom|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>